--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "next build",
-    "start": "set NODE_ENV=production && node server.js -",
-    "dev": "set NODE_ENV=dev && node server.js"
+    "start": "set NODE_ENV=production && node ./server/server.js -",
+    "dev": "set NODE_ENV=dev && node ./server/server.js"
   },
   "keywords": [],
   "author": "",
